k8s/backstage-demo/service-route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-demo
  namespace: backstage-demo
spec:
  selector:
    app: backstage-demo
  ports:
    - name: http
      port: 80
      targetPort: 7007
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backstage-demo
  namespace: backstage-demo
spec:
  to:
    kind: Service
    name: backstage-demo
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
